# orgbook-publisher-service

./: .gitignore  README.md  index.yaml
.github/workflows/: chart-releaser.yaml  image-publisher.yaml
backend/: .env.demo  Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/app/: __init__.py  security.py  utils.py
backend/app/models/: __init__.py  credential.py  did_document.py  mongodb.py  publications.py  registrations.py  untp.py  untp_manual.py
backend/app/models/untp/: __init__.py
backend/app/models/untp/v0_7_0/: __init__.py  dcc.py
backend/app/models/untp/v0_7_0/dcc/: __init__.py  conformity_attestation.py  digital_conformity_credential.py
backend/app/plugins/: __init__.py  mongodb.py  oca.py  orgbook.py  registrar.py  registry.py  soup.py  status_list.py  traction.py  untp.py
backend/app/routers/: authentication.py  credentials.py  registrations.py  related_resources.py  test_suite.py
backend/app/templates/: minimal.jinja
backend/app/validators/: __init__.py  untp.py
backend/scripts/: generate_untp_pydantic_models.py
backend/tests/: conftest.py  test_app.py  test_test_suite_api.py  test_untp_official_samples.py
backend/tests/fixtures/untp_samples/: README.md
backend/tests/fixtures/untp_samples/v0.7.0/dcc/: ConformityCredential_battery_instance.json  ConformityCredential_instance.json  ConformityCredential_smelter_instance.json
backend/tests/fixtures/untp_samples/v0.7.0/dia/: DigitalIdentityAnchor_battery_instance.json  DigitalIdentityAnchor_mine_instance.json  DigitalIdentityAnchor_smelter_instance.json
backend/untp/: __init__.py  bundle_map.py  cache.py  jsonld_loader.py  releases.py
backend/untp/bundled/: README.md  bundle-map.json
backend/untp/bundled/v0.5.0/contexts/: dcc.jsonld
backend/untp/bundled/v0.7.0/contexts/: untp.jsonld
backend/untp/bundled/v0.7.0/schemas/: ConformityAttestation.json  ConformityCredential.json
backend/untp/bundled/v0.7.0/schemas/dia/: DigitalIdentityAnchor.json  RegisteredIdentity.json
charts/orgbook-publisher/: Chart.yaml  README.md  UPGRADE.md  values.yaml
charts/orgbook-publisher/templates/: NOTES.txt  _helpers.tpl  secrets.yaml
charts/orgbook-publisher/templates/backend/: deployment.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  service.yaml
charts/orgbook-publisher/templates/mongodb/: networkpolicy.yaml  secrets.yaml
charts/untp-publisher/: Chart.yaml  README.md  UPGRADE.md  values.yaml
charts/untp-publisher/templates/backend/: deployment.yaml  networkpolicy.yaml
docs/: admin.md  clients.md
frontend/: Dockerfile  README.md  config.py  pyproject.toml
frontend/app/: __init__.py
frontend/app/plugins/: publisher.py  traction.py
frontend/app/routes/admin/: __init__.py  forms.py
frontend/app/routes/errors/: __init__.py
frontend/app/routes/main/: __init__.py
frontend/app/static/css/: tabler.icons.css  tabler.min.css
frontend/app/static/invitations/: 6cfa02ca-2aca-4ae4-8cb1-12e52dcb6752.json
frontend/app/static/js/: tabler.min.js
frontend/app/templates/components/: brand.jinja  footer.jinja  head.jinja
frontend/app/templates/layouts/: base.jinja  base.min.jinja
frontend/app/templates/pages/admin/: index.jinja  login.jinja  modal_add_issuer.jinja  modal_offer_credential.jinja
frontend/app/templates/pages/main/: index.jinja
