[project]
name = "untp-publisher"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4"
authors = [
    { name = "PatStLouis", email = "patrick.st-louis@opsecid.ca" },
]
dependencies = [
    "fastapi>=0.115.2,<0.116",
    "uvicorn>=0.29.0,<0.30",
    "pydantic-settings>=2.5.2,<3",
    "validators>=0.34.0,<0.35",
    "aries-askar>=0.3.2,<0.4",
    "multiformats>=0.3.1.post4",
    "canonicaljson>=2.0.0,<3",
    "bitstring>=4.2.3,<5",
    "bs4>=0.0.2",
    "jsonpath-ng>=1.7.0,<2",
    "jinja2>=3.1.4,<4",
    "httpx>=0.27.2,<0.28",
    "segno>=1.6.1,<2",
    "ruff>=0.7.0,<0.8",
    "pystache>=0.6.5,<0.7",
    "pyjwt>=2.9.0,<3",
    "qrcode>=8.0,<9",
    "pillow>=11.0.0,<12",
    "python-multipart>=0.0.17",
    "blake3>=0.4.1,<0.5",
    "pymongo>=4.10.1,<5",
    "base58>=2.1.1,<3",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
